# ChangeLog for net-misc/nxclient
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.89 2010/07/19 09:04:15 voyageur Exp $

  19 Jul 2010; Bernard Cafarelli <voyageur@gentoo.org>
  nxclient-3.4.0.5.ebuild, nxclient-3.4.0.7.ebuild:
  Depend on openssl 0.9.8, wrt bug #328355

  14 Jun 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -nxclient-3.3.0.6.ebuild:
  Drop 3.3 NX versions

  11 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  nxclient-3.3.0.6.ebuild, nxclient-3.4.0.5.ebuild, nxclient-3.4.0.7.ebuild:
  Fix libpng depend wrt #319247.

  10 May 2010; Bernard Cafarelli <voyageur@gentoo.org>
  nxclient-3.3.0.6.ebuild, nxclient-3.4.0.5.ebuild, nxclient-3.4.0.7.ebuild:
  Correct libpng 1.2 dependency

  10 Mar 2010; Bernard Cafarelli <voyageur@gentoo.org>
  nxclient-3.3.0.6.ebuild, nxclient-3.4.0.5.ebuild, nxclient-3.4.0.7.ebuild:
  Fix libpng depend to 1.2 (binary package)

*nxclient-3.4.0.7 (10 Mar 2010)

  10 Mar 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.4.0.7.ebuild:
  Maintenance release version bump

  17 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  nxclient-3.3.0.6.ebuild, nxclient-3.4.0.5.ebuild:
  Replace jpeg-compat with slotted <jpeg-7.

  15 Dec 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -nxclient-3.3.0.3.ebuild:
  Drop first 3.3.0 versions

  25 Nov 2009; Markus Meier <maekke@gentoo.org> nxclient-3.4.0.5.ebuild:
  x86 stable, bug #291619

  10 Nov 2009; Richard Freeman <rich0@gentoo.org> nxclient-3.4.0.5.ebuild:
  amd64 stable - 291619

*nxclient-3.4.0.5 (30 Sep 2009)

  30 Sep 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +nxclient-3.4.0.5.ebuild:
  3.4.0 version bump. This version brings new capabilities such as: support
  for CUPS 1.4 printing system, better detection of system commands to run
  KDE and Gnome sessions and the possibility of configuring the server to