@@ -3,6 +3,7 @@ DIST nxclient-3.4.0-5.x86_64.tar.gz 4575988 RMD160 aa1dc9cf0945cb0a39e33a1494082
 DIST nxclient-3.4.0-7.i386.tar.gz 4384261 RMD160 d1a4eb34999ad952af413263ee3bca9ee890f91c SHA1 a9a1730b30ff0322532d7f437af658541b54ab3b SHA256 1b7355f54658dbce1e745323671f38f4149cbe5f269d062da11d92bdbfbae08a
 DIST nxclient-3.4.0-7.x86_64.tar.gz 4569907 RMD160 b07aeef6da63fbca0160baee093647d9ffe0c848 SHA1 decfa93cf8d33f45974b22e3d15f2000a29e9cbf SHA256 319378714e10c449dd3fed95a89058b734df2db0ec0f8b7194030cfc66540862
 EBUILD nxclient-3.4.0.5.ebuild 2050 RMD160 fe41daa12d3dc6a43c4e697e50afe5e81ae50426 SHA1 fb9942a49a2227e89628423ea11cf2d578a7b37b SHA256 14e028ce68c5ba746ada3d3d3db56d793dd7f9c21648e81470999e876bd3db75
+EBUILD nxclient-3.4.0.7-r1.ebuild 2093 RMD160 b105a89ef0592de342281ba6092c4eb78129a583 SHA1 d256c404e1e372cc5c5a7cdddb9ffa5712324e63 SHA256 c9d0d096f635f71f8723d6c4befd0232f6588734d603a48abe7eba3b64a05233
 EBUILD nxclient-3.4.0.7.ebuild 2052 RMD160 ea083df7170f2b1da9a0fe66ec9341d094cfb75d SHA1 7d2b3ada2bd3e75e344d1ec534c99b0b65e954de SHA256 cad9dc5a8514548c012ac5b835afdde8e219f9afbeea0fabb3a99471e7d43fa5
-MISC ChangeLog 13952 RMD160 45ac24f731bf1d4582f9b8bd65b987bff930ab86 SHA1 daa09a9bb943b3b135b674d4392bc05a76d1885c SHA256 7dfd4a001be9b896ef38e32ab7fe645d4d7f0f786d80e240a355c85182261cfc
+MISC ChangeLog 14134 RMD160 d0dbe0f7f27bb7ddf727e1331fbaccf88be10d02 SHA1 29dbdc8a4e40c70cfe5fba82e310bd6b26cb2de4 SHA256 4a9a0b94343fe8103cc76c2b812dd47f2c687711680dc513ab63dc639f97cea8
 MISC metadata.xml 323 RMD160 5c60b28d4bc0e7d3120022994129867add0d1938 SHA1 0814e1fa95c7b410b0e40ec7221f45d75186d84e SHA256 3fbfa47bc46788bf3261c36eb8c18dbf19b695a3a4a3317d23ae3481f1caed63
