@@ -8,8 +8,8 @@ DIST nxnode-3.4.0-14.x86_64.tar.gz 6662999 RMD160 f1b6b52e9eda6fb8924bb89b85c6a5
 DIST nxnode-3.4.0-6.i386.tar.gz 5927490 RMD160 741e3052caad883fb9a316a17896702f49f0ad02 SHA1 63c567fd727c47ac33810a98bf14164607360d03 SHA256 46f05deebab3cdc571be3bb93dd4f7e02498391bf05f58c3ccc65a371c8eadeb
 DIST nxnode-3.4.0-6.x86_64.tar.gz 6619533 RMD160 066546cccced079390d2847a37f42de6c03c4630 SHA1 d3a82497dd0343f8a67888e34caa4b76d2c87b84 SHA256 8b7a0df68d1065f0e2b961886f7e29de2e06c225b5711fcbeffa226ca68ae8ce
 EBUILD nxnode-3.4.0.13.ebuild 2783 RMD160 f8121555b6d6f758387de918e4cf3c8653846fdb SHA1 4974985e28621abf82127af98c8629eae62cef43 SHA256 7d0806fab58155dae2b2fe8daeb241ce083bd6b84c78dd7da64c591d7c18eeb6
-EBUILD nxnode-3.4.0.14.ebuild 2783 RMD160 f367d927b45615017764e8b76e0742af5a08c9e1 SHA1 e67e0578d66795b05f9a9860829e54fc47d41a8c SHA256 56c07d1285eaa94c611d1d2d1afa5e5f4ea4d937a3aba7836143017d00fdf8d2
+EBUILD nxnode-3.4.0.14.ebuild 2789 RMD160 164663f70f623081ee9e02aaf24c2f625f514a2c SHA1 d1719dbca52739baebc91bd4b2d6f23fc4302ab7 SHA256 ed7bde02db3f18a79ee7405d930b5a84ba66c87179b490ec95a3621bbcdbde8a
 EBUILD nxnode-3.4.0.6-r1.ebuild 2785 RMD160 0399d87867937fb09cec75d24f122f9ac2a8036a SHA1 3ce86bab1e9a5746ea28b62349524a11617788a6 SHA256 82c34292a1554ec3c5cc8aa70285b7fc45dbafb28a588cadf397a5ab66787eb3
 EBUILD nxnode-3.4.0.6.ebuild 2780 RMD160 01fabc95defb6958181fad5d505bb2c33f953a85 SHA1 085081fec99501469858dd1ee0e5571ceeb669d1 SHA256 bd1ab1f6d741034c7eee6543acaf1ad43697d1ebfd7d36a9d391cfc1c94bf1f5
-MISC ChangeLog 9086 RMD160 983c5db28c3b1133a7317fafd2362b84a109b1c8 SHA1 10817f6b7f261a24863f62333b97efe9454b4ff0 SHA256 df97e20fed7b7018634032adc700d6e62ccc69f058eab56564f4f315a3e6353f
+MISC ChangeLog 9201 RMD160 31c36e58705b0cb1abcf5b9ede1536187c344d7b SHA1 cfe3f949a2790ab5b69c0a5222a5334a2db139cc SHA256 07656a02072c891a3e23578e2b78edbc1401da10ec2f6d411975adfc8fc7938a
 MISC metadata.xml 264 RMD160 3b4f53808aa9f3ce8bf86bdc8e08bda3fc181219 SHA1 89e785afdbf6b2c6968649c91dc17910066728eb SHA256 3eaf6b268d16ec374617534bf70f0e96d2c6399ca1b0d4ffa3eeee619d775171
