@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxclient
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.89 2010/07/19 09:04:15 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxclient/ChangeLog,v 1.90 2010/12/22 09:47:27 voyageur Exp $
+
+*nxclient-3.4.0.7-r1 (22 Dec 2010)
+
+  22 Dec 2010; Bernard Cafarelli <voyageur@gentoo.org>
+  +nxclient-3.4.0.7-r1.ebuild:
+  Make nxprint install optional with USE=cups, bug #347011
 
   19 Jul 2010; Bernard Cafarelli <voyageur@gentoo.org>
   nxclient-3.4.0.5.ebuild, nxclient-3.4.0.7.ebuild:
